Fix for persons-responsible layout bug

--- a/django/openconsent/media/css/styles.css
+++ b/django/openconsent/media/css/styles.css
@@ -465,6 +465,7 @@ span.excerpt {
 #decision_detail .stats {
 	float: left;
 	position:relative;
+	margin-top:20px;
 }
 
 #decision_detail .stats dt {
@@ -479,19 +480,18 @@ span.excerpt {
 #decision_detail .description {
 	width:70%;
 	float:left;
-	margin-top:5px;
 }
 
 #decision_detail .description p {
 	margin:0 20px 30px 20px; 
 }
 
-#decision_detail .people, #decision_detail .meeting_people {
+#decision_detail .people {
 	margin-top: 20px;
 }
 
 #decision_detail .meta {
-	float:right;
+	float:left;
 	width:30%;
 }
 
